--- a/core/templates/authenticated/charts/teacher_performance_breakdown_popup.html
+++ b/core/templates/authenticated/charts/teacher_performance_breakdown_popup.html
@@ -18,7 +18,9 @@
             <ul id='subjectroombar' class="subjectroombar nav nav-tabs">
             </ul>
         </div>
-        <div id="subjectroombargraph"></div>
+        <div id="subjectroombargraph">
+            {% include "authenticated/charts/chart_loader.html" only %}
+        </div>
     </div>
 </div>
       </div>
