--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -16,7 +16,7 @@
 {% endblock assignments %}
 
 {% block home_js %}
-    <script type="text/javascript" src="{% static "js/charts/subjectroom_assignment_performance.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/home/student.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/student_performance_report.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/student_performance_breakdown.js" %}"></script>
 {% endblock home_js %}
