--- a/core/static/css/authenticated/submission_id/base.css
+++ b/core/static/css/authenticated/submission_id/base.css
@@ -79,6 +79,12 @@ input{
     margin-left:5px;
 }
 
+#submission_student {
+    border-right: 1px solid darkgray;
+    padding-right: 15px;
+    margin-right: 5px;
+}
+
 #readonly_assignment_form,#aql_info,#uncorrected_submission_form{
  margin-left: 10px;
 }
@@ -143,8 +149,12 @@ input{
     margin-left:-5px ;
 }
 
-#revision_modal h1 {
-    margin-bottom: 30px;
+#revision_modal {
+    font-size: 16px;
+}
+
+#revision_modal li {
+    padding: 5px 0;
 }
 
 .question_subpart_field .help_tip {
