--- a/core/templates/authenticated/assignments_table/corrected_student.html
+++ b/core/templates/authenticated/assignments_table/corrected_student.html
@@ -9,5 +9,5 @@
 {% endblock suffix_column_header_extra %}
 
 {% block suffix_column_data_extra %}
-    <td>{% include 'authenticated/widgets/link.html' with title='View the assignment performance distribution' link=assignment.marks only %}</td>
+    <td>{% include 'authenticated/widgets/link.html' with title='Open this assignment' link=assignment.marks only %}</td>
 {% endblock suffix_column_data_extra %}
