--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -22,7 +22,7 @@
 {% endblock home_body %}
 
 {% block home_js %}
-    <script type="text/javascript" src="{% static "js/charts/subjectroom_assignment_performance.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/home/parent.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/parent_child_performance_report.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/parent_child_performance_breakdown.js" %}"></script>
 {% endblock home_js %}
