--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -22,7 +22,7 @@
 {% endblock assignments %}
 
 {% block home_js %}
+    <script type="text/javascript" src="{% static "js/charts/home/teacher.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/subjectroom_performance_breakdown.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/standard_assignment_performance.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/charts/subjectroom_assignment_performance.js" %}"></script>
 {% endblock home_js %}
