--- a/core/templates/authenticated/subject_id/base.html
+++ b/core/templates/authenticated/subject_id/base.html
@@ -21,11 +21,10 @@
 
 
 {% block authenticated_base_js %}
-    <script type="text/javascript" src="{% static 'js/charts/subject_id_links.js' %}"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="{% static 'js/charts/single_subjectroom_performance.js' %}"></script>
     <script type="text/javascript" src="{% static "js/charts/subjectroom_assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/standard_assignment_performance.js" %}"></script>
     {% block subject_id_js %}{% endblock subject_id_js %}
-    <script type="text/javascript" src="{% static 'js/charts/common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/charts/links/common.js' %}"></script>
 {% endblock authenticated_base_js %}
