--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -39,9 +39,8 @@
                     <div class="helptext">{{ form.subjectroom.help_text }}</div>
                 </div>
                 <div class="fieldWrapper">
-                    {{ form.question_set.label_tag }} {{ form.question_set }}
+                    {{ form.question_set }}
                     {{ form.question_set.errors }}
-                    <div class="helptext">{{ form.question_set.help_text }}</div>
                 </div>
                  <label id="assignmentDescription"> Description of Assignment:</label>
 
