first version of ink

--- a/core/templates/authenticated/widgets/simple_form.html
+++ b/core/templates/authenticated/widgets/simple_form.html
@@ -1,3 +1,4 @@
+{# TODO: this and other widgets under authenticated are used in unauthenticated pages, so restructure maybe? #}
 {% if action_url_name_override %}
     <form action='{% url action_url_name_override %}' method='post'>
 {% else %}
