ink tested and ready for deployment

--- a/core/static/css/password_strength.css
+++ b/core/static/css/password_strength.css
@@ -1,7 +1,12 @@
-.password_change label{
+label {
     margin-right:5px;
 }
-.password_change input[type="text"] {
+
+input {
+    width: 250px;
+}
+
+.new_password_block input[type="text"] {
     padding:5px 7px;
     border:1px solid #d5d9da;
     box-shadow: 0 0 5px #e8e9eb inset;
@@ -9,27 +14,23 @@
     outline:0;
 }
 
-.password_change input {
-    width:250px;
-}
-
-#result{
+.new_password_block #result {
     margin-left:5px;
 }
 
-.password_change .short{
+.new_password_block .short {
     color:#FF0000;
 }
 
-.password_change .weak{
+.new_password_block .weak {
     color:#E66C2C;
 }
 
-.password_change .good{
+.new_password_block .good {
     color:#2D98F3;
 }
 
-.password_change .strong{
+.new_password_block .strong {
     color:#006400;
 }
 
