--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -12,7 +12,7 @@
     <h5 class="well row topheader header5">Reset Password</h5>
     <div class='row margin-left-10'>
         {% with form=vm.authenticated_body.form %}
-            <form class='password_change' action='{% url form.action_url_name %}' method='post'>
+            <form action='{% url form.action_url_name %}' method='post'>
                 <div id='password_reset_text'> Fill in the following details to change your password : </div>
                 {% csrf_token %}
                 {{ form.non_field_errors }}
