--- a/core/templates/authenticated/widgets/password_change.html
+++ b/core/templates/authenticated/widgets/password_change.html
@@ -1,3 +1,4 @@
+<div class="new_password_block">
 <div class="fieldWrapper">
     <label for="{{ form.new_password1.id_for_label }}">{{ form.new_password1.label }}:</label>
     <div class='input_box'>
@@ -15,6 +16,6 @@
     {% include 'authenticated/widgets/help_text.html' with field=form.new_password2 only %}
     {{ form.new_password2.errors }}
 </div>
-
+</div>
 
 
