--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -2,7 +2,7 @@
 
 <div class="well col-md-2 col-sm-2 col-xs-2" id="sidebar">
     <ul class="nav nav-tabs nav-stacked">
-        <img id="school-stamp" src="{% static 'img/school-stamp.png' %}"/>
+        <img id="school-stamp" src="{{ sidebar.school_stamp_url }}"/>
         {% block sidebar_content %}{% endblock sidebar_content %}
         {% block sidebar_listings %}
             {% include "authenticated/sidebar/listings.html" with listings=sidebar.listings only %}
