--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -41,6 +41,7 @@
                 <div class="fieldWrapper">
                     {{ form.question_set }}
                     {{ form.question_set.errors }}
+                    <div class="helptext">{{ form.question_set.help_text }}</div>
                 </div>
                  <label id="assignmentDescription"> Description of Assignment:</label>
 
