--- a/sphinx/templates/sphinx/app.html
+++ b/sphinx/templates/sphinx/app.html
@@ -97,15 +97,15 @@
 </div>
 
 <div id="modules-container">
-    {% include 'module_loader.html' with module_name='fraction' only %}
-    {% include 'module_loader.html' with module_name='mcmaq' only %}
-    {% include 'module_loader.html' with module_name='mcqoption' only %}
-    {% include 'module_loader.html' with module_name='mcsaq' only %}
-    {% include 'module_loader.html' with module_name='numerical' only %}
-    {% include 'module_loader.html' with module_name='options' only %}
-    {% include 'module_loader.html' with module_name='range' only %}
-    {% include 'module_loader.html' with module_name='textual' only %}
-    {% include 'module_loader.html' with module_name='var_constraints' only %}
+    {% include 'sphinx/module_loader.html' with module_name='fraction' only %}
+    {% include 'sphinx/module_loader.html' with module_name='mcmaq' only %}
+    {% include 'sphinx/module_loader.html' with module_name='mcqoption' only %}
+    {% include 'sphinx/module_loader.html' with module_name='mcsaq' only %}
+    {% include 'sphinx/module_loader.html' with module_name='numerical' only %}
+    {% include 'sphinx/module_loader.html' with module_name='options' only %}
+    {% include 'sphinx/module_loader.html' with module_name='range' only %}
+    {% include 'sphinx/module_loader.html' with module_name='textual' only %}
+    {% include 'sphinx/module_loader.html' with module_name='var_constraints' only %}
 </div>
 
 <div id="temp-divs">
