--- a/sphinx/templates/sphinx/modules/mcsaq.html
+++ b/sphinx/templates/sphinx/modules/mcsaq.html
@@ -6,7 +6,7 @@
 <br>
 <h3>Correct Answer</h3>
 <div id="MCSAQcorrect" class="subDiv">
-    {% include 'modules/mcqoption.html' %}
+    {% include 'sphinx/modules/mcqoption.html' %}
 </div>
 <hr>
 <h3>Incorrect Answers</h3>
