--- a/core/templates/activation/html_body.html
+++ b/core/templates/activation/html_body.html
@@ -10,7 +10,7 @@
 
 <p>For additional reference, please watch the video tutorial by clicking on the link below:</p>
 
-<a href="https://www.youtube.com/watch?v=nAgfTNpSnIs">VIDEO TUTORIAL</a>
+<a href="https://www.youtube.com/watch?v=eywl1HS9NzA">VIDEO TUTORIAL</a>
 
 <p>Feel free to reach out to us at +91 7057216343 or contact@hwcentral.in for any enquiries/feedback!</p>
 
