--- a/ink/templates/ink/index.html
+++ b/ink/templates/ink/index.html
@@ -5,7 +5,7 @@
 {% block authenticated_base_css %}
     <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/ink/index.css" %}" type="text/css"/>
-{% endblock base_css %}
+{% endblock authenticated_base_css %}
 
 {% block authenticated_body %}
     <h4 class='well header header5'>Account Activation</h4>
