--- a/sphinx/templates/sphinx/index.html
+++ b/sphinx/templates/sphinx/index.html
@@ -7,13 +7,13 @@
 {% load staticfiles %}
 
 {% block root_css %}
-    <link rel="stylesheet" href="{% static 'css/app.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/sphinx/index.css' %}" type="text/css"/>
 {% endblock root_css %}
 
 {% block root_js %}
     <script type="text/javascript" src="{% static 'js/react.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/react-dom.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/app.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/sphinx/index.js' %}"></script>
     {% include 'mathjax_script.html' only %}
 {% endblock root_js %}
 
