--- a/hwcentral/templates/503.html
+++ b/hwcentral/templates/503.html
@@ -4,9 +4,10 @@
 
 {% block base_body %}
 <div class="indented_body_left">
-    <h2>Homework Central is currently down for scheduled maintenance</h2>
+    <h2>Homework Central is currently down for scheduled maintenance.</h2>
 
-    <p>Please check back during our regular service hours (4am-10pm). Thanks for your patience.</p>
+    <p>Our regular maintenance window is from 10:00pm to 10:30pm IST. Please check back later to access the portal.
+        Thank you for your patience.</p>
 
     {% include "return_prompt.html" only %}
 </div>
