--- a/ink/templates/ink/index.html
+++ b/ink/templates/ink/index.html
@@ -8,7 +8,7 @@
 {% endblock authenticated_base_css %}
 
 {% block authenticated_body %}
-    <h4 class='well header header5'>Account Activation</h4>
+    <h4 class='well row topheader header5'>Account Activation</h4>
 
     <div class="indented_body_left">
         {% with body=vm.authenticated_body %}
