--- a/ink/templates/ink/parent_id.html
+++ b/ink/templates/ink/parent_id.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block authenticated_body %}
-    <h4 class='well header header5'>Parent Account Activation</h4>
+    <h4 class='well row topheader header5'>Parent Account Activation</h4>
 
     <div class="indented_body_left">
         {% with body=vm.authenticated_body %}
