--- a/core/static/css/password_strength.css
+++ b/core/static/css/password_strength.css
@@ -1,11 +1,3 @@
-label {
-    margin-right:5px;
-}
-
-input {
-    width: 250px;
-}
-
 .new_password_block input[type="text"] {
     padding:5px 7px;
     border:1px solid #d5d9da;
@@ -43,4 +35,8 @@ input {
 #password-reset-submit-button {
     padding: 5px;
     margin-top:25px;
+}
+
+form input { /*use standard input size on all forms where password strength is used*/
+    width: 250px;
 }
