--- a/core/templates/authenticated/assignment_id.html
+++ b/core/templates/authenticated/assignment_id.html
@@ -3,7 +3,7 @@
 {% block form_id %}"readonly_assignment_form"{% endblock form_id %}
 
 {% block question %}
-    {% if vm.authenticated_body.show_solution %}
+    {% if vm.authenticated_body.is_preview %}
         {% include "authenticated/question/question_solved.html" with question=question form=form question_index=forloop.counter0 only %}
     {% else %}
         {{ block.super }}
