--- a/hwcentral/templates/root.html
+++ b/hwcentral/templates/root.html
@@ -26,6 +26,8 @@
     <!-- Scripts -->
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/react.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/react-dom.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/root.js' %}"></script>
     {% block root_js %}{% endblock root_js %}
 
