--- a/core/templates/authenticated/charts/student_subjectroom_performance_popup.html
+++ b/core/templates/authenticated/charts/student_subjectroom_performance_popup.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
 
     <!-- Modal content-->
-    <div class="subjectroom_chart_popup modal-content">
+      <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title"> Student Performance Report</h4>
