--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<div class="well col-md-2 col-sm-2 col-xs-2" id="sidebar">
+<div class="well col-md-2 hidden-sm hidden-xs" id="sidebar">
     <ul class="nav nav-tabs nav-stacked">
         <img id="school-stamp" src="{{ sidebar.school_stamp_url }}"  onerror="img_reload(this);"/>
         {% block sidebar_content %}{% endblock sidebar_content %}
