--- a/core/templates/authenticated/sidebar/parent_childinfo.html
+++ b/core/templates/authenticated/sidebar/parent_childinfo.html
@@ -1,2 +1,2 @@
-<h6 class='sidebarheader header header6 parent_child_info_header'> {{ child_info.name }} </h6>
+<h6 class='sidebarheader header parent_child_info_header'> {{ child_info.name }} </h6>
 <div>{{ child_info.classroom }}</div>
