--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -13,6 +13,8 @@
 
 {% block root_js %}
     <script type="text/javascript" src="{% static 'js/chosen.min.js' %}"></script>
+    <script type="text/javascript" src="{% static "js/constants.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/helpers.js" %}"></script>
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
 
     {% block base_js %}{% endblock base_js %}
