--- a/core/static/css/authenticated/sidebar.css
+++ b/core/static/css/authenticated/sidebar.css
@@ -62,3 +62,12 @@
     border-top: 0px solid black;
     padding-top: 20px;
 }
+
+#advanced-analytics-button {
+    font-size: 0.7vw;
+}
+
+#advanced-analytics-button-container {
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
