--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -52,9 +52,7 @@
 
                 <div id="actionrow">
                 <a title="Generate a read-only preview of the assignment in the format it will be provided to students"
-                   class="no-decoration hwcentral_action_button preview_link_disabled" id="preview_link"
-                   href="{% url 'assignment_preview_id' '0' %}">
-                    {# 0 is placeholder , will be overwritten on page load #}
+                   class="no-decoration hwcentral_action_button disabled_action_button" id="preview_link">
                     Preview HomeWork
                 </a>
                 <input id='submit_button' class='hwcentral_action_button no-decoration'
