--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -2,9 +2,12 @@
 
 <div class="well col-md-2 hidden-sm hidden-xs" id="sidebar">
     <ul class="nav nav-tabs nav-stacked">
-        <a title="Return to home page" href="{% url 'index' %}"><img id="school-stamp"
-                                                                     src="{{ sidebar.school_stamp_url }}"
-                                                                     onerror="img_reload(this);"/></a>
+        <div><a title="Return to home page" href="{% url 'index' %}"><img id="school-stamp"
+                                                                          src="{{ sidebar.school_stamp_url }}"
+                                                                          onerror="img_reload(this);"/></a></div>
+        <div id="advanced-analytics-button-container"><a id="advanced-analytics-button" class="hwcentral_action_button"
+                                                         title="View Advanced Analytics" href="{% url 'edge_index' %}">ADVANCED
+            ANALYTICS</a></div>
         {% block sidebar_content %}{% endblock sidebar_content %}
         {% block sidebar_listings %}
             {% include "authenticated/sidebar/listings.html" with listings=sidebar.listings only %}
