changed edge button label

--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -6,7 +6,7 @@
                                                                           src="{{ sidebar.school_stamp_url }}"
                                                                           onerror="img_reload(this);"/></a></div>
         <div id="advanced-analytics-button-container"><a id="advanced-analytics-button" class="hwcentral_action_button"
-                                                         title="View Advanced Analytics" href="{% url 'edge_index' %}">ADVANCED
+                                                         title="View Advanced Analytics" href="{% url 'edge_index' %}">
             ANALYTICS</a></div>
         {% block sidebar_content %}{% endblock sidebar_content %}
         {% block sidebar_listings %}
