--- a/edge/static/css/edge/index.css
+++ b/edge/static/css/edge/index.css
@@ -10,3 +10,15 @@
 #go-button {
     display: inline-block;
 }
+
+#positive-pane {
+    background: lightgreen;
+}
+
+#negative-pane {
+    background: lightcoral;
+}
+
+#note {
+    padding: 10px;
+}
